--- a/site-root/sass/_keys.scss
+++ b/site-root/sass/_keys.scss
@@ -4,6 +4,7 @@
 
 .key-string {
     border: 1px solid rgba(black, .1);
+    display: inline-block;
     font-family: $mono-font;
     padding: .25em .25em 0;
 }
