--- a/site-root/sass/_tables.scss
+++ b/site-root/sass/_tables.scss
@@ -35,15 +35,6 @@ thead {
 	}
 }
 
-.col-response-code {
-	text-align: center;
-}
-
-.col-response-time,
-.col-response-size {
-	text-align: right;
-}
-
 .col-empty-text {
 	color: $muted-color;
 	font-style: italic;
